import React from 'react';
import Enzyme, { shallow, mount } from 'enzyme';
import Adapter from '@wojtekmaj/enzyme-adapter-react-17';
import toJson from 'enzyme-to-json';
import { nanoid } from 'nanoid';
import { axe, toHaveNoViolations } from 'jest-axe';

import XUIEditableTable from '../XUIEditableTable';
import { tableVariantClassNames } from '../private/constants';
const tableName = tableVariantClassNames.editable;

Enzyme.configure({ adapter: new Adapter() });
expect.extend(toHaveNoViolations);

jest.mock('nanoid');
const mockedNanoid = 'testGeneratedId';
nanoid.mockImplementation(() => mockedNanoid);

describe('<XUIEditableTable />', () => {
  it('renders correctly', () => {
    const wrapper = shallow(
      <XUIEditableTable>
        <div>XUIEditableTable</div>
      </XUIEditableTable>,
    );
    expect(toJson(wrapper)).toMatchSnapshot();
  });

  it('composes the className and passed an id correctly', () => {
    const wrapper = shallow(<XUIEditableTable className="test-classname" id="test-id" />);
    expect(toJson(wrapper)).toMatchSnapshot();
  });

  it('renders the ariaLabel correctly', () => {
    const wrapper = shallow(<XUIEditableTable ariaLabel="An editable table" />);
    expect(toJson(wrapper)).toMatchSnapshot();
  });

  it('renders a style element, when hiddenColumns are passed', () => {
    const wrapper = mount(<XUIEditableTable hiddenColumns={[1]} />);
    expect(wrapper.find('style')).toHaveLength(1);
  });

  it('renders rules to hide the proper columns, when hiddenColumns are passed', () => {
    const wrapper = mount(<XUIEditableTable hiddenColumns={[1, 2]} />);
    expect(wrapper.text()).toContain(
      `#${tableName}-${mockedNanoid} .xui-editabletablerow > *:nth-child(2) { display: none; }`,
    );
    expect(wrapper.text()).toContain(
      `#${tableName}-${mockedNanoid} .xui-editabletablerow > *:nth-child(3) { display: none; }`,
    );
  });

  it('should pass accessibility testing', async () => {
    const wrapper = mount(<XUIEditableTable />);
    const results = await axe(wrapper.html());
    expect(results).toHaveNoViolations();
  });

  describe('validation message', () => {
    it('renders correctly when the table is invalid and there is a validation message', () => {
      const wrapper = shallow(<XUIEditableTable isInvalid validationMessage="Error message" />);
      expect(toJson(wrapper)).toMatchSnapshot();
    });

    it('renders when the table is invalid and there is a validation message', () => {
      const wrapper = mount(<XUIEditableTable isInvalid validationMessage="Error message" />);

      expect(wrapper.text()).toContain('Error message');
    });

    it('does not render if there is no validation message', () => {
      const wrapper = mount(<XUIEditableTable isInvalid />);

      expect(wrapper.find('.xui-editabletable--validation')).toHaveLength(0);
    });

    it('does not mount if the table is valid', () => {
      const wrapper = mount(<XUIEditableTable validationMessage="Error message" />);

      expect(wrapper.text()).not.toContain('Error message');
    });
  });

  describe('pinned columns', () => {
    it('renders the pinned first column when hasPinnedFirstColumn is passed', () => {
      const wrapper = shallow(<XUIEditableTable hasPinnedFirstColumn />);

      expect(wrapper.find('.xui-editabletable-pinfirst')).toHaveLength(1);
    });

    it('renders the pinned last column when hasPinnedLastColumn is passed', () => {
      const wrapper = shallow(<XUIEditableTable hasPinnedLastColumn />);

      expect(wrapper.find('.xui-editabletable-pinlast')).toHaveLength(1);
    });
  });
});
