// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTable /> composes the className correctly 1`] = `
<div
  className="xui-editabletable--wrapper"
>
  <div
    className="xui-editabletable test-classname"
  >
    <table
      className="xui-editabletable--table"
    >
      <ContextProvider
        value={
          Object {
            "rowOptions": Object {},
            "tableRef": Object {
              "current": undefined,
            },
          }
        }
      />
    </table>
  </div>
</div>
`;

exports[`<XUIEditableTable /> render with the caption 1`] = `
<div
  className="xui-editabletable--wrapper"
>
  <div
    className="xui-editabletable"
  >
    <table
      className="xui-editabletable--table"
    >
      <caption
        className="xui-editabletable--caption"
      >
        An editable table
      </caption>
      <ContextProvider
        value={
          Object {
            "rowOptions": Object {},
            "tableRef": Object {
              "current": undefined,
            },
          }
        }
      />
    </table>
  </div>
</div>
`;

exports[`<XUIEditableTable /> renders correctly 1`] = `
<div
  className="xui-editabletable--wrapper"
>
  <div
    className="xui-editabletable"
  >
    <table
      className="xui-editabletable--table"
    >
      <ContextProvider
        value={
          Object {
            "rowOptions": Object {},
            "tableRef": Object {
              "current": undefined,
            },
          }
        }
      >
        <div>
          XUIEditableTable
        </div>
      </ContextProvider>
    </table>
  </div>
</div>
`;
